added the app,mysql deployment yaml step.

--- a/jenkinsfile
+++ b/jenkinsfile
@@ -4,6 +4,7 @@ pipeline {
           IMAGE_NAME = "bankappci"
           //RELEASE = "1.0.0"
           TAG = "${env.BUILD_NUMBER}"
+          KUBE_NAMESPACE = "webapps"
     }
 
     /*parameters {
@@ -48,6 +49,18 @@ pipeline {
 }
     }
          }
+         stage('Deploy MySQL Deployment and Service') {
+            steps {
+                dir('Manifests'){
+                  script {
+                    kubeconfig(credentialsId: 'k8s-token', serverUrl: 'https://3370DF416F397B0970B2CDC7088432E8.yl4.us-east-2.eks.amazonaws.com') {
+                        sh "kubectl apply -f bankapp.yml -n ${KUBE_NAMESPACE}" 
+                        sh 'kubectl apply -f database.yaml -n ${KUBE_NAMESPACE}' // Ensure you have the MySQL deployment YAML ready
+                    }  
+                }
+                
+            }
+        }
 
 }
 }
