added the jenkinsfile,ingress.yaml.

--- a/jenkinsfile
+++ b/jenkinsfile
@@ -61,6 +61,18 @@ pipeline {
                 
             }
         }
+        stage('Deploy MySQL Deployment and Service') {
+            steps {
+                dir('Manifests'){
+                  script {
+                    kubeconfig(credentialsId: 'k8s-token', serverUrl: 'https://3370DF416F397B0970B2CDC7088432E8.yl4.us-east-2.eks.amazonaws.com') {
+                        sh "kubectl apply -f ingress.yaml -n ${KUBE_NAMESPACE}" 
+                         // Ensure you have the MySQL deployment YAML ready
+                    }  
+                }
+                
+            }
+        }
          
     }
 }
