--- a/Manifests/ingress.yaml
+++ b/Manifests/ingress.yaml
@@ -11,7 +11,7 @@ metadata:
 spec:
   ingressClassName: nginx
   rules:
-    - host: 
+    - host: a2f96676aff0f4b9582f5db191fcd2ed-280246728.us-east-2.elb.amazonaws.com
       http:
         paths:
           - path: /api
