--- a/jenkinsfile
+++ b/jenkinsfile
@@ -53,7 +53,7 @@ pipeline {
             steps {
                 dir('Manifests'){
                   script {
-                    kubeconfig(credentialsId: 'k8s-token', serverUrl: 'https://3370DF416F397B0970B2CDC7088432E8.yl4.us-east-2.eks.amazonaws.com') {
+                    kubeconfig(credentialsId: 'k8s-token', serverUrl: 'https://7A8BE1C83F7EC8A8C1CDB0232F411BBD.gr7.us-east-1.eks.amazonaws.com') {
                         sh "kubectl apply -f bankapp.yaml -n ${KUBE_NAMESPACE}" 
                         sh 'kubectl apply -f database.yaml -n ${KUBE_NAMESPACE}' // Ensure you have the MySQL deployment YAML ready
                     }  
@@ -66,7 +66,7 @@ pipeline {
             steps {
                 dir('Manifests'){
                   script {
-                    kubeconfig(credentialsId: 'k8s-token', serverUrl: 'https://3370DF416F397B0970B2CDC7088432E8.yl4.us-east-2.eks.amazonaws.com') {
+                    kubeconfig(credentialsId: 'k8s-token', serverUrl: 'https://7A8BE1C83F7EC8A8C1CDB0232F411BBD.gr7.us-east-1.eks.amazonaws.com') {
                         sh "kubectl apply -f ingress.yaml -n ingress-nginx" 
                          // Ensure you have the MySQL deployment YAML ready
                     }  
